[project]
name = "mosna"
version = "0.1.0"
description = "Multi-omics spatial network analysis library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU GPLv3" }
authors = [
    { name = "Alexis Coullomb", email = "alexis.coullomb.pro@gmail.com" },
]
keywords = ["spatial", "networks", "cells", "transcriptomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Core dependencies needed for the bulk of the analysis pipeline.
dependencies = [
    "numpy",
    "pandas",
    "polars",            # fast dataframe / parquet engine (see mosna.io)
    "pyarrow",           # parquet backend shared by pandas & polars
    "scipy",
    "scikit-learn",
    "scikit-image",
    "statsmodels",
    "matplotlib",
    "seaborn",
    "colorcet",
    "tqdm",
    "joblib",
    "igraph",
    "leidenalg",
    "anndata",
    "lifelines",
    "scikit-survival",
    "xgboost",
    "composition-stats",
    "umap-learn",
    "hdbscan",
    "fastcluster",
    "dask[distributed]",
    "openpyxl",
    "odfpy",
]

[project.optional-dependencies]
# Heavy / environment-specific backends. Import is guarded in the code so the
# package still imports when these are absent.
spatial = ["tysserand"]
deep = ["torch", "torch_geometric", "torchgmm"]
integration = ["scanorama"]
topology = ["gudhi"]
viz = ["napari"]
gpu = ["cupy", "cudf", "cugraph", "cuml"]
benchmark = ["polars", "pyarrow", "pandas"]
dev = ["pytest", "ruff", "ipykernel"]
# Docs build deps. Kept light: heavy scientific backends are mocked in
# docs/source/conf.py (autodoc_mock_imports), so RTD does not need them.
docs = ["sphinx", "sphinx-rtd-theme", "nbsphinx", "myst-parser"]

[project.urls]
Homepage = "https://github.com/AlexCoul/mosna"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mosna"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
